<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".compscreen5"
    android:background="@drawable/gradient3">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SOME USEFULL ARRAY ALGORITHM"
            android:background="#000000"
            android:textColor="#F5D92E"
            android:id="@+id/compitetive11"
            android:gravity="center"
            android:textSize="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/compitetive12"
            android:layout_below="@id/compitetive11"
            android:textColor="#000000"
            android:layout_marginBottom="0dp"
            android:text="@string/screen5"
            android:layout_marginTop="20dp"
            android:textSize="24dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comp12"
            android:src="@drawable/comp12"
            android:layout_below="@id/compitetive12"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/compitetive13"
            android:layout_below="@id/comp12"
            android:textColor="#000000"
            android:text="@string/img2"
            android:textSize="24dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comp13"
            android:src="@drawable/comp13"
            android:layout_below="@id/compitetive13"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/compitetive14"
            android:layout_below="@id/comp13"
            android:textColor="#000000"
            android:layout_marginBottom="0dp"
            android:text="@string/img3"
            android:layout_marginTop="20dp"
            android:textSize="24dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comp14"
            android:src="@drawable/comp14"
            android:layout_below="@id/compitetive14"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/compitetive15"
            android:layout_below="@id/comp14"
            android:textColor="#000000"
            android:layout_marginBottom="0dp"
            android:text="@string/img4"
            android:layout_marginTop="20dp"
            android:textSize="24dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comp15"
            android:src="@drawable/comp15"
            android:layout_below="@id/compitetive15"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/compitetive16"
            android:layout_below="@id/comp15"
            android:textColor="#000000"
            android:layout_marginBottom="0dp"
            android:text="@string/img5"
            android:layout_marginTop="20dp"
            android:textSize="24dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comp16"
            android:src="@drawable/comp16"
            android:layout_below="@id/compitetive16"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/comp16"
            android:text="Next"
            android:layout_marginTop="30dp"
            android:textColor="#FFFFFF"
            android:background="#000000"
            android:id="@+id/next54"
            android:layout_marginLeft="150dp"/>

    </RelativeLayout>


</ScrollView>